--- a/src/components/settings/functionality-settings/functionality-settings.component.html
+++ b/src/components/settings/functionality-settings/functionality-settings.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="mt-4 pt-4 border-t border-gray-700/50 flex justify-end items-center gap-4">
-      <button (click)="openWebhookModal()" class="bg-blue-600 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-lg text-sm">
+      <button (click)="openAddWebhookModal()" class="bg-blue-600 hover:bg-blue-500 text-white font-semibold py-2 px-4 rounded-lg text-sm">
         Gerenciar
       </button>
     </div>
